@@ -20,7 +20,7 @@
 #define GNOME_ICONDIR "share/pixmaps"
 
 /* Defines where GNU Chess resides on the system */
-#define GNUCHESS "/gtk/bin/gnuchess"
+#define GNUCHESS "gnuchess.exe"
 
 /* Define to 1 if you have the `bind_textdomain_codeset' function. */
 /* #undef HAVE_BIND_TEXTDOMAIN_CODESET */
