@@ -108,6 +108,7 @@ BOARDS_C_SRC =	\
 	algebra.c \
 	algebra_guesscount.c \
 	canal_lock.c \
+	chess.c chess_position.c chess_notation.c \
 	click_on_letter.c \
 	clickgame.c \
 	clockgame.c \
